// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view with empty state 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginTop": 15,
                "width": "85%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 25,
                    "borderWidth": 0.8,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                    "marginLeft": 15,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Wallet Polkadot
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 23,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      100
                       
                      DOT
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 23,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      $
                      1000
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 30,
              }
            }
          >
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F0EEEE",
                    "borderRadius": 45,
                    "height": 70,
                    "justifyContent": "center",
                    "width": 70,
                  }
                }
                testID="sendBtn"
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰸇
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 30,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F0EEEE",
                      "borderRadius": 45,
                      "height": 70,
                      "justifyContent": "center",
                      "width": 70,
                    },
                  ]
                }
                testID="receiveBtn"
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰮏
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#cccccc",
                "height": 1,
                "marginTop": 25,
                "width": "90%",
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Test view with txs 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "address": "address#2DOT",
              "currency": 0,
              "fee": 10,
              "id": "2",
              "status": 1,
              "timestamp": 1583960400000,
              "txType": 1,
              "usdFee": 10,
              "usdValue": 10,
              "userId": "userId",
              "value": 10,
            },
          ],
          "title": "12 March 2020",
        },
        Object {
          "data": Array [
            Object {
              "address": "address#1",
              "currency": 0,
              "fee": 12,
              "id": "1",
              "status": 2,
              "timestamp": 1581454800000,
              "txType": 1,
              "usdFee": 12,
              "usdValue": 12,
              "userId": null,
              "value": 12,
            },
          ],
          "title": "12 February 2020",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        1,
        4,
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginTop": 15,
                "width": "85%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 25,
                    "borderWidth": 0.8,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                    "marginLeft": 15,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Wallet Polkadot
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 23,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      100
                       
                      DOT
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 23,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      $
                      1000
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "marginTop": 30,
              }
            }
          >
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F0EEEE",
                    "borderRadius": 45,
                    "height": 70,
                    "justifyContent": "center",
                    "width": 70,
                  }
                }
                testID="sendBtn"
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰸇
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Send
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginLeft": 30,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F0EEEE",
                      "borderRadius": 45,
                      "height": 70,
                      "justifyContent": "center",
                      "width": 70,
                    },
                  ]
                }
                testID="receiveBtn"
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontSize": 24,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰮏
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#cccccc",
                "height": 1,
                "marginTop": 25,
                "width": "90%",
              }
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Bold",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginBottom": 5,
                "marginLeft": "5%",
              }
            }
          >
            12 March 2020
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                height={50}
                source={
                  Object {
                    "uri": "userAvatarMock",
                  }
                }
                style={
                  Object {
                    "borderRadius": 25,
                    "height": 50,
                    "width": 50,
                  }
                }
                width={50}
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "column",
                    "marginLeft": 10,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  name
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Regular",
                        "fontSize": 15,
                        "fontStyle": "normal",
                      },
                      Object {
                        "color": "#EA4335",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  -
                  10
                   
                  DOT
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                    },
                    Object {
                      "alignSelf": "center",
                      "color": "#EA4335",
                    },
                  ]
                }
              >
                -
                $
                10
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Bold",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginBottom": 5,
                "marginLeft": "5%",
              }
            }
          >
            12 February 2020
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "width": "90%",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 25,
                    "borderWidth": 0.8,
                    "height": 50,
                    "overflow": "hidden",
                    "width": 50,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "white",
                      "borderRadius": 23,
                      "bottom": 0,
                      "height": 23,
                      "justifyContent": "center",
                      "left": 30,
                      "position": "absolute",
                      "width": 23,
                    },
                    Object {
                      "borderColor": "#EA4335",
                      "borderWidth": 1,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#EA4335",
                        "fontSize": 20,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅖
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                    "flexDirection": "column",
                    "marginLeft": 10,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  address#1
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "fontFamily": "Roboto-Regular",
                        "fontSize": 15,
                        "fontStyle": "normal",
                      },
                      Object {
                        "color": "#EA4335",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  -
                  12
                   
                  DOT
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                    },
                    Object {
                      "alignSelf": "center",
                      "color": "#EA4335",
                    },
                  ]
                }
              >
                -
                $
                12
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</View>
`;
